--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:url" content="URL OF THE WEBSITE"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="static/image/your_banner_image.png" />
-  <meta property="og:image:width" content="1200"/>
+  <meta property="og:image:width" content="1400"/>
   <meta property="og:image:height" content="630"/>
 
 
@@ -52,22 +52,21 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Vision Is All You Need: <br>A Vision-Only Approach to Dynamics Estimation in Autonomous Navigation</h1>
+            <h1 class="title is-2 publication-title">Vision Is All You Need: <br>A Vision-Only Approach to Dynamics Estimation in Autonomous Navigation</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="mailto:lazar.milikic99@gmail.com" target="_blank">Lazar Milikic</a><sup>*</sup>,</span>
+                <a href="mailto:lazar.milikic@epfl.ch" target="_blank">Lazar Milikic</a>,</span>
                 <span class="author-block">
-                  <a href="mailto:ahmadjarrarcco@gmail.com" target="_blank">Ahmad Jarrar</a><sup>*</sup>,</span>
+                  <a href="mailto:ahmad.khan@epfl.ch" target="_blank">Ahmad Jarrar</a>,</span>
                   <span class="author-block">
-                    <a href="mailto:said.gurbuz@epfl.ch" target="_blank">Said Gurbuz</a><sup>*</sup>,</span>
+                    <a href="mailto:said.gurbuz@epfl.ch" target="_blank">Said Gurbuz</a>,</span>
                     <span class="author-block">
-                      <a href="mailto:marko.mekjavic@gmail.com" target="_blank">Marko Mekjavic</a><sup>*</sup>,</span>
+                      <a href="mailto:marko.mekjavic@epfl.ch" target="_blank">Marko Mekjavic</a>,</span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Ecole Polytechnique Federale de Lausanne</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Contact Possibilities</small></span>
+                    <span class="author-block">Ecole Polytechnique Federale de Lausanne (EPFL)</span>
                   </div>
 
                   <div class="column has-text-centered">
