--- a/index.html
+++ b/index.html
@@ -563,6 +563,21 @@
 </section>
 
 
+<section class="section">
+  <div class="container is-max-desktop">
+    <!-- Conclusion & Limitations. -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3" id="conclusion-limitations">V. Conclusion & Limitations</h2>
+        <div class="content has-text-justified">
+        </div>
+      </div>
+    </div>
+    <!--/ Conclusion & Limitations. -->
+  </div>
+</section>
+
+
 
 <!-- Youtube video -->
 <section class="hero is-small is-light">
